--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
     "chokidar": "^2.0.4",
     "dotenv": "^6.1.0",
     "node-record-lpcm16": "^0.3.1",
+    "superagent": "^4.0.0-beta.5",
     "yargs": "^12.0.2"
   },
   "devDependencies": {},
